--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,11 @@
-BIN_SOUND_TRACK_SWAP := sound-track-swap
-
 PROJECT_DIR := ..
-SOURCE_DIR := ../src
+SOURCE_DIR := $(PROJECT_DIR)/src
+BIN_DIR := $(PROJECT_DIR)/bin
+
+SOUND_TRACK_SWAP := $(BIN_DIR)/sound-track-swap
 
 SOURCES := $(wildcard $(SOURCE_DIR)/*.cpp)
 OBJECTS := $(subst %.cpp,%.o,$(SOURCES))
 
-$(BIN_SOUND_TRACK_SWAP) : $(OBJECTS)
+$(SOUND_TRACK_SWAP) : $(OBJECTS)
 	$(CXX) $(OBJECTS) -o $@
